<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".EditorActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbarlayout_editoractivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_editoractivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/azul"
                android:elevation="4dp"
                android:theme="@style/Theme.MaterialComponents"/>

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_edittext_onde_comprou_editoractivity"
            style="@style/edittext_layou"
            android:hint="@string/hint_onde_comprou_editoractivity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbarlayout_editoractivity">

            <EditText
                android:id="@+id/edittext_onde_comprou_editoactivity"
                style="@style/edittext"
                android:inputType="textCapSentences|textAutoCorrect" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txt_cifrao_editoractivity"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="32dp"
            android:elevation="4dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/cifrao"
            android:textColor="@color/cinza"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/layout_edittext_valor_compra_editoractivity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/layout_edittext_valor_compra_editoractivity" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_edittext_valor_compra_editoractivity"
            style="@style/edittext_layou"
            android:hint="@string/hint_valor_compra_editoractivity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_edittext_onde_comprou_editoractivity">

            <EditText
                android:id="@+id/edittext_valor_compra_editoactivity"
                style="@style/edittext"
                android:inputType="number"
                android:maxLength="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txt_x_parcelas_editoractivity"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="32dp"
            android:elevation="4dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/x"
            android:textColor="@color/cinza"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/layout_edittext_quantidade_parcelas_editoractivity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/layout_edittext_quantidade_parcelas_editoractivity" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_edittext_quantidade_parcelas_editoractivity"
            style="@style/edittext_layou"
            android:hint="@string/hint_quantidade_parcelas_editoractivity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_edittext_valor_compra_editoractivity">

            <EditText
                android:id="@+id/edittext_quantidade_parcelas_editoactivity"
                style="@style/edittext"
                android:inputType="number"
                android:maxLength="3" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_edittext_data_compra_editoractivity"
            style="@style/edittext_layou"
            android:hint="@string/hint_data_compra_editoractivity"
            app:endIconDrawable="@drawable/ic_calendar"
            app:endIconMode="custom"
            app:endIconTint="@color/cinza"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_edittext_quantidade_parcelas_editoractivity">

            <EditText
                android:id="@+id/edittext_data_compra_editoactivity"
                style="@style/edittext"
                android:inputType="number"
                android:maxLength="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/botao_salvar_editoractivity"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_margin="16dp"
            android:backgroundTint="@color/azul_escuro"
            android:text="@string/botao_salvar_editoractivity"
            android:textAlignment="center"
            android:textColor="@color/branco"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_edittext_data_compra_editoractivity" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>