<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".InfoCartaoActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_infocartaoactivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/azul"
        android:orientation="vertical">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:collapsedTitleTextColor="@android:color/white"
            app:contentScrim="@color/azul"
            app:expandedTitleGravity="bottom|center_horizontal"
            app:expandedTitleMarginBottom="16dp"
            app:expandedTitleTextAppearance="@style/titulo_infocartaoactivity_expanded"
            app:expandedTitleTextColor="@android:color/white"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:title="Compras">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingTop="48dp"
                android:paddingEnd="16dp"
                android:paddingBottom="62dp"
                app:layout_collapseMode="parallax">

                <TextView
                    android:id="@+id/txt_total_mes_infocartaoacvtivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/cabecalho_valor_mensal_infocartaoactivity"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_valor_mensal_infocartaoactivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/cifrao"
                    android:textAlignment="center"
                    android:textColor="@color/preto"
                    android:textSize="32sp" />

                <TextView
                    android:id="@+id/txt_mes_total_infocartaoactivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/mes"
                    android:textAlignment="center"
                    android:textColor="@color/preto"
                    android:textSize="16sp" />

            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_infocartaoactivity"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/Theme.MaterialComponents"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.MaterialComponents.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_infocartaoactivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:itemCount="5"
        tools:listitem="@layout/item_recyclerview_infocartaoactivity" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatigactionbutton_infocartaoactivity"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/azul_escuro"
        android:elevation="8dp"
        android:src="@drawable/ic_add"
        app:layout_anchor="@id/appbar_infocartaoactivity"
        app:layout_anchorGravity="bottom|end"
        app:tint="@color/branco" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>